# libzakformgtkdecoder

./: Makefile.am  configure.ac  libzakformgtkdecoder.pc.in
src/: Makefile.am  formelementdecoder.c  formelementdecoder.h  libzakformgtkdecoder.h
